--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@
     font-family: "boxicons";
     src: url("boxicons.ttf");
 }
+:root {
+    --accent: rgb(167, 255, 80);
+}
 
 *, *::before, *::after {
     font-family: 'Roboto Mono';
@@ -190,7 +193,7 @@
     content: '';
     height: 10%;
     width: 0%;
-    background-color: rgb(127, 255, 208);
+    background-color: var(--accent);
     bottom: 0;
     left: 0;
     z-index: -1;
@@ -200,7 +203,7 @@
 .underline-3d::before {
     height: 80%;
     bottom: 0%;
-    background-color: rgb(127, 255, 208);
+    background-color: var(--accent);
     color: black;
 }
 .underline-name::after{
@@ -220,25 +223,30 @@
 }
 
 .backcard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border: 1px solid white;
     max-width: clamp(400px,600px,700px);
     height: clamp(350px,1vh,1080px);
     position: relative;
     transform-style: inherit;
-    padding-left: 10rem;
+    padding-left: 11rem;
     color: white;
     margin-block-end: 15rem;
     padding-bottom: 3rem;
     padding-top: 2.5rem;
-    padding-right: 2.5rem;
+    padding-right: 1.5rem;
 }
 .backcard h3 {
     font-size: 2rem;
     line-height: 3rem;
+    padding-bottom: 1.5rem; 
 }
 
-.bottom-card-info{
-    padding-block: 3rem;
+.bottom-card-info img {
+    padding-block: 0.1rem;
+    height: 2rem;
 }
 
 #card1::after {
