--- a/main.css
+++ b/main.css
@@ -183,6 +183,7 @@
 .underline-gd,
 .underline-3d {
     position: relative;
+    white-space: nowrap;
 }
 .underline-web,
 .underline-gd,
@@ -437,7 +438,7 @@
 
 @media (max-width: 1100px) {
     .backcard {
-        width: 400px;
+        width: 85%;
         padding-left: 1.5rem;
         margin-top: 5rem;
     }
@@ -447,11 +448,62 @@
         top: -10rem;
         left: auto;
     }
+}
+
+@media (max-width: 860px) {
     .title-style {
-        font-size: 1.7rem;
-        width: 400px;
+        font-size: 1.5rem;
+        width: 80%;
     }
     .title-style p {
         font-size: 1rem;
+    }
+    .title-style::after {
+        left: 0;
+        transform: rotate(45deg) translateZ(-25px) translateX(55rem) translateY(30rem) scale(3);
+    }
+    .sidebar-container {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 3rem;
+        background-color: rgba(0,0,0,.5);
+        padding-block: 2rem;
+        padding-bottom: 4rem;
+    }
+    .anchored {
+        transform: scale(1.2) translateY(2rem);
+
+    }
+    .anchored::before {
+        content: '';
+        position: absolute;
+        background-color: white;
+        left: 50%;
+        top: -7rem;
+        height: 6rem;
+        width: 2px;
+    }
+    .anchors::before {
+        content: '';
+        position: absolute;
+        background-color: white;
+        left: 50%;
+        top: -4.5rem;
+        height: 4rem;
+        width: 2px;
+        transform: scale(0);
+    }
+    .anchors:hover::before{
+        transition: transform 200ms;
+        transform-origin: right;
+        transform: scale(1);
+    }
+    .english-button:hover::after,
+    .lang-active::after,
+    .portugues-button:hover::after {
+        top: 0;
+        right: -.6rem;
     }
 }
